--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@ indices(A)
 A = [1,2,3,4,2]
 indices(A,2)
 1-element Array{Array{Int64,1},1}:
- [2, 5]</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/f31afefd89ddd46ab51ff2a25f3ef56d11e1d2b6/src/CamiXon.jl#LL12-L36">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T" href="#CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">indices_cnt(A::AbstractArray{T,1}, a::T...)  where T</code></pre><p>The number of indices of selected Array elements (default: all elements)</p><p><strong>Examples:</strong></p><pre><code class="language-none">A = collect(&quot;ahsgh&quot;)
+ [2, 5]</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL12-L36">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T" href="#CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">indices_cnt(A::AbstractArray{T,1}, a::T...)  where T</code></pre><p>The number of indices of selected Array elements (default: all elements)</p><p><strong>Examples:</strong></p><pre><code class="language-none">A = collect(&quot;ahsgh&quot;)
 indices_cnt(A,&#39;h&#39;)
 1-element Array{Array{Int64,1},1}:
  2
@@ -24,11 +24,72 @@ indices_cnt(A)
  1
  2
  1
- 1</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/f31afefd89ddd46ab51ff2a25f3ef56d11e1d2b6/src/CamiXon.jl#LL43-L62">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.partitions_cnt-Tuple{Int64,Int64}" href="#CamiXon.partitions_cnt-Tuple{Int64,Int64}"><code>CamiXon.partitions_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">partitions_cnt(n::Int,k::Int)</code></pre><p>The number of integer partitions of n in k parts</p><p><strong>Example:</strong></p><pre><code class="language-none">partitions_cnt(5,2)
- 2</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/f31afefd89ddd46ab51ff2a25f3ef56d11e1d2b6/src/CamiXon.jl#LL69-L78">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.partitions_cnt-Tuple{Int64}" href="#CamiXon.partitions_cnt-Tuple{Int64}"><code>CamiXon.partitions_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">partitions_cnt(n::Int)</code></pre><p>The total number of integer partitions of n</p><p><strong>Example:</strong></p><pre><code class="language-none">partitions_cnt(5)
- 7</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/f31afefd89ddd46ab51ff2a25f3ef56d11e1d2b6/src/CamiXon.jl#LL84-L94">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}" href="#CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}"><code>CamiXon.permutations_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">permutations_cnt(A::AbstractArray{T,1}; unique = false)  where T</code></pre><p>The number of permutations (option: unique permutations) of the elements of a 1D array</p><p><strong>Examples:</strong></p><pre><code class="language-none">A = collect(&quot;ahsgh&quot;)
+ 1</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL43-L62">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.partitions_cnt-Tuple{Int64,Int64}" href="#CamiXon.partitions_cnt-Tuple{Int64,Int64}"><code>CamiXon.partitions_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">partitions_cnt(n::Int,k::Int)</code></pre><p>The number of integer partitions of n in k parts</p><p><strong>Example:</strong></p><pre><code class="language-none">partitions_cnt(5,2)
+ 2</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL69-L78">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.partitions_cnt-Tuple{Int64}" href="#CamiXon.partitions_cnt-Tuple{Int64}"><code>CamiXon.partitions_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">partitions_cnt(n::Int)</code></pre><p>The total number of integer partitions of n</p><p><strong>Example:</strong></p><pre><code class="language-none">partitions_cnt(5)
+ 7</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL84-L94">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.canonical_partitions" href="#CamiXon.canonical_partitions"><code>CamiXon.canonical_partitions</code></a> — <span class="docstring-category">Function</span></header><section><div><pre><code class="language-julia">canonical_partitions(A,i; trailer=false)</code></pre><p>The canonical partition in integers of element i of array A</p><p>trailer: array A included as last element in the output container</p><p><strong>Examples:</strong></p><pre><code class="language-none">canonical_partitions([6],1; trailer=true)
+6-element Array{Array{Int64,1},1}:
+ [1, 1, 1, 1, 1, 1]
+ [2, 2, 2]
+ [3, 3]
+ [4, 2]
+ [5, 1]
+ [6]
+
+canonical_partitions([6],1)
+5-element Array{Array{Int64,1},1}:
+ [1, 1, 1, 1, 1, 1]
+ [2, 2, 2]
+ [3, 3]
+ [4, 2]
+ [5, 1]
+
+canonical_partitions([4,4,4,4],3; trailer=true)
+4-element Array{Array{Int64,1},1}:
+ [4, 4, 1, 1, 1, 1, 1, 1, 1, 1]
+ [4, 4, 2, 2, 2, 2]
+ [4, 4, 3, 3, 2]
+ [4, 4, 4, 4]
+
+canonical_partitions([4,4,1,1],3)
+Error: integer partition of 1 at index 3 in [4, 4, 1, 1] coincides with the trailer</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL103-L139">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.next_partitions" href="#CamiXon.next_partitions"><code>CamiXon.next_partitions</code></a> — <span class="docstring-category">Function</span></header><section><div><pre><code class="language-julia">next_partitions(o,i)</code></pre><p>The canonical partitions of  o[1][:] o[2][:] ... at index i</p><p><strong>Examples:</strong></p><pre><code class="language-none">o = [[4,4,4,4]]
+1-element Array{Array{Int64,1},1}:
+ [4, 4, 4, 4]
+
+o = next_partitions(o,2)
+3-element Array{Array{Int64,1},1}:
+ [4, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+ [4, 2, 2, 2, 2, 2, 2]
+ [4, 3, 3, 3, 3]
+
+o = next_partitions(o,3)
+3-element Array{Array{Int64,1},1}:
+ [4, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+ [4, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+ [4, 3, 2, 2, 2, 2, 1]
+
+o = next_partitions(o,4)
+1-element Array{Array{Int64,1},1}:
+ [4, 3, 2, 1, 1, 1, 1, 1, 1, 1]
+
+o = next_partitions(o,5)</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL154-L183">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.all_partitions" href="#CamiXon.all_partitions"><code>CamiXon.all_partitions</code></a> — <span class="docstring-category">Function</span></header><section><div><pre><code class="language-julia">all_partitions(n)</code></pre><p>The integer partitions of the integer n</p><p><strong>Examples:</strong></p><pre><code class="language-none">all_partitions(7)
+15-element Array{Array{Int64,1},1}:
+ [1, 1, 1, 1, 1, 1, 1]
+ [2, 2, 2, 1]
+ [3, 3, 1]
+ [4, 3]
+ [5, 2]
+ [6, 1]
+ [7]
+ [2, 1, 1, 1, 1, 1]
+ [3, 1, 1, 1, 1]
+ [3, 2, 2]
+ [4, 1, 1, 1]
+ [4, 2, 1]
+ [5, 1, 1]
+ [2, 2, 1, 1, 1]
+ [3, 2, 1, 1]</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL195-L220">source</a></section></article><article class="docstring"><header><a class="docstring-binding" id="CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}" href="#CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}"><code>CamiXon.permutations_cnt</code></a> — <span class="docstring-category">Method</span></header><section><div><pre><code class="language-julia">permutations_cnt(A::AbstractArray{T,1}; unique = false)  where T</code></pre><p>The number of permutations (option: unique permutations) of the elements of a 1D array</p><p><strong>Examples:</strong></p><pre><code class="language-none">A = collect(&quot;ahsgh&quot;)
 permutations_cnt(A)
  120
 
 permutations_cnt(A; unique=true)
- 60</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/f31afefd89ddd46ab51ff2a25f3ef56d11e1d2b6/src/CamiXon.jl#LL230-L244">source</a></section></article><h2 id="Index"><a class="docs-heading-anchor" href="#Index">Index</a><a id="Index-1"></a><a class="docs-heading-anchor-permalink" href="#Index" title="Permalink"></a></h2><ul><li><a href="#CamiXon.indices-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices</code></a></li><li><a href="#CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices_cnt</code></a></li><li><a href="#CamiXon.partitions_cnt-Tuple{Int64}"><code>CamiXon.partitions_cnt</code></a></li><li><a href="#CamiXon.partitions_cnt-Tuple{Int64,Int64}"><code>CamiXon.partitions_cnt</code></a></li><li><a href="#CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}"><code>CamiXon.permutations_cnt</code></a></li></ul></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 20 January 2021 11:33">Wednesday 20 January 2021</span>. Using Julia version 1.5.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+ 60</code></pre></div><a class="docs-sourcelink" target="_blank" href="https://github.com/walra356/CamiXon.jl/blob/2d35cd45cb1bfaadaaad04fa51ce51c6436e03ae/src/CamiXon.jl#LL230-L244">source</a></section></article><h2 id="Index"><a class="docs-heading-anchor" href="#Index">Index</a><a id="Index-1"></a><a class="docs-heading-anchor-permalink" href="#Index" title="Permalink"></a></h2><ul><li><a href="#CamiXon.all_partitions"><code>CamiXon.all_partitions</code></a></li><li><a href="#CamiXon.canonical_partitions"><code>CamiXon.canonical_partitions</code></a></li><li><a href="#CamiXon.indices-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices</code></a></li><li><a href="#CamiXon.indices_cnt-Union{Tuple{T}, Tuple{AbstractArray{T,1},Vararg{T,N} where N}} where T"><code>CamiXon.indices_cnt</code></a></li><li><a href="#CamiXon.next_partitions"><code>CamiXon.next_partitions</code></a></li><li><a href="#CamiXon.partitions_cnt-Tuple{Int64,Int64}"><code>CamiXon.partitions_cnt</code></a></li><li><a href="#CamiXon.partitions_cnt-Tuple{Int64}"><code>CamiXon.partitions_cnt</code></a></li><li><a href="#CamiXon.permutations_cnt-Tuple{AbstractArray{Any,1}}"><code>CamiXon.permutations_cnt</code></a></li></ul></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Wednesday 20 January 2021 12:44">Wednesday 20 January 2021</span>. Using Julia version 1.5.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
